--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "vue-starter-contentful",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "serve": "node dist/server/app.js",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "vite-plugin-api-routes": "^1.0.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
