--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "sirv": "^2.0.4",
     "vue": "^3.3.13",
