--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "sirv": "^2.0.4",
     "vite-plugin-api-routes": "^1.0.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
