--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "sirv": "^2.0.4",
     "vite-plugin-api-routes": "^1.0.8",
