--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "sirv": "^2.0.4",
     "vue": "^3.3.13",
     "vue-router": "^4.2.5"
