Try Vercel's legacy routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/api/ssr" },
-    { "source": "/about", "destination": "/api/ssr" }
-  ],
-  "routes": [{ "src": "/", "dest": "/api/ssr" }]
+  "routes": [
+    { "src": "/", "dest": "/api/ssr" },
+    { "src": "/about", "dest": "/api/ssr" }
+  ]
 }
