Enable Vercel development locally

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "routes": [
-    { "src": "/", "dest": "/api/ssr" },
-    { "src": "/about", "dest": "/api/ssr" }
+    { "src": "/", "dest": "/api/server" },
+    { "src": "/about", "dest": "/api/server" }
   ]
 }
